<resources>
    <string name="app_name" translatable="false">LiftDo</string>

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="account_settings">Account Settings</string>
    <string name="language">Language</string>
    <string name="commission_details">Commission Details</string>
    <string name="logout">Logout</string>
    <string name="agree_terms_and_conditions">Agree Terms and Conditions</string>
    <string name="register">Register</string>
    <string name="see_terms_and_conditions_here">see terms and conditions here</string>
    <string name="current_password">Current Password</string>
    <string name="change_number">Change Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="ride_fare">Ride Fare</string>
    <string name="liftdo_commission">LiftDo Commission</string>
    <string name="total">Total</string>
    <string name="receive">Receive</string>
    <string name="terms_amp_service"><![CDATA[Terms & Service]]></string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_and_service">Terms and Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone_number">Phone Number</string>
    <string name="logo">logo</string>
    <string name="unpaid_commission">Unpaid Commission</string>
    <string name="how_it_works">How It Works</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="full_name">Full Name</string>
    <string name="cnic">CNIC</string>
    <string name="license_number">License Number</string>
    <string name="your_vehicle">Your Vehicle</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rider_route_enter">RiderRouteEnter</string>
    <string name="places_address_zip_code">Places, Address, ZIP Code</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="place">TODO</string>
    <string name="give_lift">Give Lift</string>
    <string name="services">Services</string>

    <!-- APIs Keys   -->

    <string name="maps_API_KEY" translatable="false">AIzaSyDDUHbGyAw-OOHO5AW0l5L0bMRUACSdvN4</string>
    <string name="login">Login</string>
    <string name="we_provide_fastest_nservice">We Provide Fastest\nService</string>
    <string name="request_ride">Request Ride</string>
    <string name="confirm_route">Confirm Route</string>
    <string name="title_activity_passenger_route_enter">PassengerRouteEnter</string>
    <string name="lift_do">Lift Do</string>
    <string name="lift_lo">Lift Lo</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="we_provide_fastest_service">We provide fastest service</string>
    <string name="sameer">Sameer</string>
    <string name="title_activity_rider_track_ride">RiderTrackRide</string>
    <string name="title_activity_passenger_ride_track">PassengerRideTrack</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="welcome">Welcome,</string>
    <string name="endride">End Ride</string>
    <string name="start">Start</string>
    <string name="reached">Reached</string>
    <string name="send_otp">Send OTP</string>
    <string name="_3xx_xxxxxxx" translatable="false">3xx-xxxxxxx</string>
    <string name="_92" translatable="false">+92</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="let_s_get_you_registered">Let\'s get you registered!</string>
    <string name="welcome_to_lift_do">Welcome to Lift Do :)</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="click_to_start">Click to start</string>
    <string name="reduce_petrol_expenses_up_to_n50_on_all_rides">Reduce petrol expenses up to\n50% on all rides</string>
    <string name="save_up_to_50_on_nall_rides">Save up to 50% on\nall rides</string>
    <string name="available_riders">Available Riders</string>
    <string name="request_driver">Request driver</string>
    <string name="scheduled_rides">Scheduled Rides</string>
    <string name="help">Help</string>
    <string name="on_going">On Going</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_lift_do">LiftDoActivity</string>
    <string name="no_on_going_rides">No On going rides</string>
</resources>