<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllActivities.Startup.SendOTP">

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_to_lift_do"
            android:textColor="#003F41"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart ="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/let_s_get_you_registered"
            android:textColor="#003F41"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textColor="#003F41"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_92"
                android:textColor="#003F41"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/_3xx_xxxxxxx"
                android:gravity="center"
                android:maxLength="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="#003F41"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:background="#FECD0C"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            <Button
                android:id="@+id/buttonGetOTP"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/greenbuttons"
                android:text="@string/send_otp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="40dp"
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>
</ScrollView>