<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@drawable/background"
    tools:context=".AllActivities.Startup.Signup"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="228dp"
            android:layout_height="109dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.431"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"/>
        <EditText
            android:id="@+id/et_emailAddress"
            android:layout_width="267dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/inputfield"
            android:ems="10"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="emailAddress" />
        <EditText
            android:id="@+id/et_username"
            android:layout_width="267dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/inputfield"
            android:ems="10"
            android:hint="@string/username"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_emailAddress"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="name" />
        <TextView
            android:id="@+id/et_phoneNum"
            android:layout_width="267dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/inputfield"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone_number"
            tools:editable="false"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username"
            tools:ignore="TouchTargetSizeCheck" />
        <EditText
            android:id="@+id/et_cnic"
            android:layout_width="267dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/inputfield"
            android:ems="10"
            android:hint="@string/cnic"
            android:inputType="phone"
            android:layout_gravity="center"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phoneNum"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="267dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/inputfield"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_cnic"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="password" />
        <EditText
            android:id="@+id/et_confirmPassword"
            android:layout_width="267dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/inputfield"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="password" />
        <CheckBox
            android:id="@+id/cb_acceptAgree"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/agree_terms_and_conditions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confirmPassword" />
        <TextView
            android:id="@+id/tv_terms"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/see_terms_and_conditions_here"
            android:textAlignment="center"
            android:textColor="#0027FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_acceptAgree" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/button"
                android:layout_width="202dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_buttons"
                android:text="@string/register"
                android:textColor="#003F41"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />
            <ProgressBar
                android:id="@+id/progress_circularSignUp"
                android:layout_width="40dp"
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>
</ScrollView>